--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,11 @@ anyio==3.7.1
 click==8.1.5
 exceptiongroup==1.1.2
 fastapi==0.100.0
+gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+packaging==23.1
 pydantic==2.0.3
 pydantic_core==2.3.0
 python-dotenv==1.0.0
