--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
 annotated-types==0.5.0
 anyio==3.7.1
+asyncpg==0.28.0
 click==8.1.5
+databases==0.7.0
 exceptiongroup==1.1.2
 fastapi==0.100.0
 gunicorn==21.2.0
 h11==0.14.0
 httptools==0.6.0
 idna==3.4
+loguru==0.7.0
 packaging==23.1
 pydantic==2.0.3
 pydantic_core==2.3.0
 python-dotenv==1.0.0
 PyYAML==6.0
 sniffio==1.3.0
+SQLAlchemy==1.4.49
 starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.0
