--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ anyio==3.7.1
 asyncpg==0.28.0
 click==8.1.5
 databases==0.7.0
+dnspython==2.4.2
 exceptiongroup==1.1.2
 fastapi==0.100.0
 gunicorn==21.2.0
@@ -13,6 +14,7 @@ loguru==0.7.0
 packaging==23.1
 pydantic==2.0.3
 pydantic_core==2.3.0
+pymongo==4.5.0
 python-dotenv==1.0.0
 PyYAML==6.0
 sniffio==1.3.0
