--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ httptools==0.6.0
 idna==3.4
 loguru==0.7.0
 packaging==23.1
+psycopg2==2.9.9
 pydantic==2.0.3
 pydantic_core==2.3.0
 pymongo==4.5.0
